// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Box Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      Box
    </div>
  </div>
</div>
`;

exports[`Storyshots Button As 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <a
      className="button"
    >
      As a tag
    </a>
  </div>
</div>
`;

exports[`Storyshots Button Buttons Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons are-medium"
    >
      <button
        className="button"
      >
        All
      </button>
      <button
        className="button"
      >
        Medium
      </button>
      <button
        className="button"
      >
        Size
      </button>
    </div>
    <div
      className="buttons are-small"
    >
      <button
        className="button"
      >
        Small
      </button>
      <button
        className="button"
      >
        Small
      </button>
      <button
        className="button"
      >
        Small
      </button>
      <button
        className="button is-normal"
      >
        Normal
      </button>
      <button
        className="button"
      >
        Small
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Colors 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        className="button is-white"
      >
        White
      </button>
      <button
        className="button"
      >
        Light
      </button>
      <button
        className="button is-dark"
      >
        Dark
      </button>
      <button
        className="button is-black"
      >
        Black
      </button>
      <button
        className="button is-primary"
      >
        Primary
      </button>
      <button
        className="button is-link"
      >
        Link
      </button>
      <button
        className="button is-info"
      >
        Info
      </button>
      <button
        className="button is-warning"
      >
        Warning
      </button>
      <button
        className="button is-danger"
      >
        Danger
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <button
      className="button"
    >
      Button
    </button>
  </div>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        className="button"
        disabled={true}
      >
        Disabled
      </button>
      <button
        className="button is-primary"
        disabled={true}
      >
        Disabled
      </button>
      <button
        className="button is-link"
        disabled={true}
      >
        Disabled
      </button>
      <button
        className="button is-info"
        disabled={true}
      >
        Disabled
      </button>
      <button
        className="button is-success"
        disabled={true}
      >
        Disabled
      </button>
      <button
        className="button is-warning"
        disabled={true}
      >
        Disabled
      </button>
      <button
        className="button is-danger"
        disabled={true}
      >
        Disabled
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Fullwidth 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        className="button is-small is-fullwidth"
      >
        Small
      </button>
      <button
        className="button is-normal is-fullwidth"
      >
        Normal
      </button>
      <button
        className="button is-medium is-fullwidth"
      >
        Medium
      </button>
      <button
        className="button is-large is-fullwidth"
      >
        Large
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Invert Outlined 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box has-background-primary"
    >
      <div
        className="buttons"
      >
        <button
          className="button is-primary is-outlined is-inverted"
        >
          Primary
        </button>
        <button
          className="button is-link is-outlined is-inverted"
        >
          Link
        </button>
        <button
          className="button is-info is-outlined is-inverted"
        >
          Info
        </button>
        <button
          className="button is-warning is-outlined is-inverted"
        >
          Warning
        </button>
        <button
          className="button is-danger is-outlined is-inverted"
        >
          Danger
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Inverted 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        className="button is-primary is-inverted"
      >
        Primary
      </button>
      <button
        className="button is-link is-inverted"
      >
        Link
      </button>
      <button
        className="button is-info is-inverted"
      >
        Info
      </button>
      <button
        className="button is-warning is-inverted"
      >
        Warning
      </button>
      <button
        className="button is-danger is-inverted"
      >
        Danger
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Light Colors 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        className="button is-primary is-light"
      >
        Primary
      </button>
      <button
        className="button is-link is-light"
      >
        Link
      </button>
      <button
        className="button is-info is-light"
      >
        Info
      </button>
      <button
        className="button is-warning is-light"
      >
        Warning
      </button>
      <button
        className="button is-danger is-light"
      >
        Danger
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Loading 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        className="button is-loading"
      >
        Loading
      </button>
      <button
        className="button is-primary is-loading"
      >
        Loading
      </button>
      <button
        className="button is-link is-loading"
      >
        Loading
      </button>
      <button
        className="button is-info is-loading"
      >
        Loading
      </button>
      <button
        className="button is-success is-loading"
      >
        Loading
      </button>
      <button
        className="button is-warning is-loading"
      >
        Loading
      </button>
      <button
        className="button is-danger is-loading"
      >
        Loading
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Outlined 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        className="button is-primary is-outlined"
      >
        Primary
      </button>
      <button
        className="button is-link is-outlined"
      >
        Link
      </button>
      <button
        className="button is-info is-outlined"
      >
        Info
      </button>
      <button
        className="button is-warning is-outlined"
      >
        Warning
      </button>
      <button
        className="button is-danger is-outlined"
      >
        Danger
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Rounded 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        className="button is-rounded"
      >
        Rounded
      </button>
      <button
        className="button is-primary is-rounded"
      >
        Rounded
      </button>
      <button
        className="button is-link is-rounded"
      >
        Rounded
      </button>
      <button
        className="button is-info is-rounded"
      >
        Rounded
      </button>
      <button
        className="button is-success is-rounded"
      >
        Rounded
      </button>
      <button
        className="button is-danger is-rounded"
      >
        Rounded
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        className="button is-small"
      >
        Small
      </button>
      <button
        className="button"
      >
        Default
      </button>
      <button
        className="button is-normal"
      >
        Normal
      </button>
      <button
        className="button is-medium"
      >
        Medium
      </button>
      <button
        className="button is-large"
      >
        Large
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button States 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        className="button"
      >
        Normal
      </button>
      <button
        className="button is-hovered"
      >
        Hovered
      </button>
      <button
        className="button is-focused"
      >
        Focused
      </button>
      <button
        className="button is-active"
      >
        Active
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Static 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <button
      className="button is-static"
    >
      Static
    </button>
  </div>
</div>
`;

exports[`Storyshots Columns Default 1`] = `
<div
  className="section"
>
  <div
    className="columns"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <div
      className="column"
    >
      <p
        className="has-background-primary has-text-white"
        style={
          Object {
            "padding": "0.5rem 1rem",
          }
        }
      >
        First column
      </p>
    </div>
    <div
      className="column"
    >
      <p
        className="has-background-primary has-text-white"
        style={
          Object {
            "padding": "0.5rem 1rem",
          }
        }
      >
        Second column
      </p>
    </div>
    <div
      className="column"
    >
      <p
        className="has-background-primary has-text-white"
        style={
          Object {
            "padding": "0.5rem 1rem",
          }
        }
      >
        Third column
      </p>
    </div>
    <div
      className="column"
    >
      <p
        className="has-background-primary has-text-white"
        style={
          Object {
            "padding": "0.5rem 1rem",
          }
        }
      >
        Fourth column
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Container Default 1`] = `
<div
  className="section"
>
  <div
    className="container has-background-info has-text-white"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "64px",
        "justifyContent": "center",
      }
    }
  >
    This is a Container
  </div>
</div>
`;

exports[`Storyshots Footer Default 1`] = `
<footer
  className="footer"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  This is a Footer
</footer>
`;

exports[`Storyshots Hero Default 1`] = `
<div
  className="hero is-primary is-bold is-fullheight"
>
  <div
    className="hero-body"
  >
    <div
      className="container"
    >
      <h1
        className="title"
      >
        Primary bold title
      </h1>
      <h2
        className="subtitle"
      >
        Primary bold subtitle
      </h2>
    </div>
  </div>
</div>
`;

exports[`Storyshots Level Default 1`] = `
<div
  className="section"
>
  <nav
    className="level"
  >
    <div
      className="level-item has-text-centered"
    >
      <div>
        <p
          className="heading"
        >
          Tweets
        </p>
        <p
          className="title"
        >
          3,456
        </p>
      </div>
    </div>
    <div
      className="level-item has-text-centered"
    >
      <div>
        <p
          className="heading"
        >
          Following
        </p>
        <p
          className="title"
        >
          123
        </p>
      </div>
    </div>
    <div
      className="level-item has-text-centered"
    >
      <div>
        <p
          className="heading"
        >
          Followers
        </p>
        <p
          className="title"
        >
          456K
        </p>
      </div>
    </div>
    <div
      className="level-item has-text-centered"
    >
      <div>
        <p
          className="heading"
        >
          Likes
        </p>
        <p
          className="title"
        >
          789
        </p>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Storyshots Section Default 1`] = `
<div
  className="section has-background-info has-text-white"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  This is a Section
</div>
`;

exports[`Storyshots withColor Has Background 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box has-background-primary has-text-white"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      has-background-primary
    </div>
  </div>
</div>
`;

exports[`Storyshots withColor Has Text 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box has-text-primary"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      has-text-primary
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Clearfix 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-clearfix"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-clearfix
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Clipped 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-clipped"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-overlay
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Overlay 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-overlay"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-overlay
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Pulled Left 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-pulled-left"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-pulled-left
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Pulled Right 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-pulled-right"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-pulled-right
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Radiusless 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-radiusless"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-radiusless
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Relative 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-relative"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-relative
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Shadowless 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-shadowless"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-shadowless
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Unselectable 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-unselectable"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-unselectable
    </div>
  </div>
</div>
`;

exports[`Storyshots withResponsive Hidden 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-hidden"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-hidden
    </div>
  </div>
</div>
`;

exports[`Storyshots withResponsive Invisible 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-invisible"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-invisible
    </div>
  </div>
</div>
`;

exports[`Storyshots withResponsive Is Flex 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-flex"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-flex
    </div>
  </div>
</div>
`;

exports[`Storyshots withResponsive Is Flex Mobile 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-flex-mobile"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-flex-mobile
    </div>
  </div>
</div>
`;

exports[`Storyshots withResponsive Sr Only 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box is-sr-only"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-sr-only
    </div>
  </div>
</div>
`;

exports[`Storyshots withSpacing Margin Top 6 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box mt-6"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      margin-top-6
    </div>
  </div>
</div>
`;

exports[`Storyshots withSpacing Padding Top 6 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="box pt-6"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      padding-top-6
    </div>
  </div>
</div>
`;
